Dark mode fix - Strikes, Fraser

--- a/styles/dark.scss
+++ b/styles/dark.scss
@@ -21,3 +21,7 @@ body {
 .list-group li {
     background-color: rgb(33, 35, 40) !important;
 }
+
+.panel {
+    background-color: rgba(24, 26, 27, 0.8);
+}
